Added schemes and env var

--- a/project.yml
+++ b/project.yml
@@ -28,3 +28,18 @@ targets:
       - target: Primedian-iOS
       - carthage: Quick
       - carthage: Nimble
+schemes:
+  Primedian-iOS:
+    build:
+      targets:
+        Primedian-iOS: all
+        Primedian-iOSTests: [test]
+        Primedian-iOSUITests: [test]
+    run:
+      environmentVariables:
+        PRIMEDIAN_API_BASE_URL: "http://localhost:8000"
+    test:
+      gatherCoverageData: true
+      targets:
+        - name: Primedian-iOSTests
+        - name: Primedian-iOSUITests
